--- a/manajemenpetklinik/index.html
+++ b/manajemenpetklinik/index.html
@@ -60,7 +60,6 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold text-primary">Statistik Klinik</h2>
-                <p class="text-muted">Data terkini aktivitas dan layanan Pet Clinic kami</p>
             </div>
             
             <div class="row g-4">
@@ -103,7 +102,7 @@
 
     <section id="produk">
     <div class="container">
-        <h3 class="mb-4">Daftar Makanan Hewan</h3>
+        <h3 class="mb-4">Daftar Kebutuhan Hewan</h3>
 
         <div class="row">
             <div class="col-md-4 mb-4">
